--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only ./index.ts",
-    "start": "node ./dist/index.js",
+    "start": "node /dist/index.js",
     "build": "tsc"
   },
   "keywords": [],
@@ -34,6 +34,6 @@
     "socket-io": "^1.0.0",
     "socket.io": "^4.5.3",
     "ts-node": "^10.9.1",
-    "tsc": "^2.0.4"
+    "typescript": "^4.8.4"
   }
 }
