--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only ./index.ts",
+    "starting": "nodemon dist/index.js",
     "start": "node dist/index.js",
     "build": "tsc"
   },
@@ -31,6 +32,7 @@
     "mongoose": "^6.7.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.20",
     "socket-io": "^1.0.0",
     "socket.io": "^4.5.3",
     "ts-node": "^10.9.1",
